RESOLVED FIXED226978
[Mac] CoreMedia WrapperClass does not need alignment fixup
https://bugs.webkit.org/show_bug.cgi?id=226978
Summary [Mac] CoreMedia WrapperClass does not need alignment fixup
Eric Carlson
Reported 2021-06-14 09:30:50 PDT
CoreMedia WrapperClass does not need the alignment fixup required by CMBaseClass
Attachments
Patch (5.79 KB, patch)
2021-06-14 11:51 PDT, Eric Carlson
no flags
Patch (5.95 KB, patch)
2021-06-14 13:01 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2021-06-14 09:31:08 PDT
Eric Carlson
Comment 2 2021-06-14 11:51:12 PDT
Geoffrey Garen
Comment 3 2021-06-14 11:57:34 PDT
Comment on attachment 431348 [details] Patch r=me
mitz
Comment 4 2021-06-14 11:57:48 PDT
Comment on attachment 431348 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=431348&action=review > Source/WebKit/Shared/mac/MediaFormatReader/CoreMediaWrapped.h:158 > + static constexpr struct { WrapperClass derivedClass; } derivedClass { Wrapped::wrapperClass() }; Don’t really need this to be a struct anymore.
mitz
Comment 5 2021-06-14 11:58:30 PDT
Comment on attachment 431348 [details] Patch Didn’t mean to reset Geoff’s r+ though.
Geoffrey Garen
Comment 6 2021-06-14 11:59:35 PDT
> > Source/WebKit/Shared/mac/MediaFormatReader/CoreMediaWrapped.h:158 > > + static constexpr struct { WrapperClass derivedClass; } derivedClass { Wrapped::wrapperClass() }; > > Don’t really need this to be a struct anymore. 👍🏻
Eric Carlson
Comment 7 2021-06-14 12:46:58 PDT
(In reply to mitz from comment #4) > Comment on attachment 431348 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=431348&action=review > > > Source/WebKit/Shared/mac/MediaFormatReader/CoreMediaWrapped.h:158 > > + static constexpr struct { WrapperClass derivedClass; } derivedClass { Wrapped::wrapperClass() }; > > Don’t really need this to be a struct anymore. Good point, thanks!
Eric Carlson
Comment 8 2021-06-14 13:01:05 PDT
EWS
Comment 9 2021-06-14 14:47:08 PDT
Found 1 new test failure: imported/w3c/web-platform-tests/webrtc-extensions/transfer-datachannel-service-worker.https.html
Eric Carlson
Comment 10 2021-06-15 06:10:39 PDT
Comment on attachment 431357 [details] Patch Failing test is unrelated
EWS
Comment 11 2021-06-15 06:14:03 PDT
Committed r278870 (238814@main): <https://commits.webkit.org/238814@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431357 [details].
Note You need to log in before you can comment on or make changes to this bug.