[Mac] CoreMedia WrapperClass does not need alignment fixup https://bugs.webkit.org/show_bug.cgi?id=226978 rdar://78864290

Reviewed by Geoffrey Garen and Dan Bernstein.

Source/WebCore:

* platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::WebCoreDecompressionSession::enqueueSample): static_assert CMBufferQueueRef
callback struct alignment and version size.

Source/WebKit:

* Shared/mac/MediaFormatReader/CoreMediaWrapped.h:
(WebKit::CoreMediaWrapped<Wrapped>::vTable): Don't add padding to WrapperClass,
it isn't necessary. static_assert CMBaseClass and WrapperClass alignment and
.version sizes.


Canonical link: https://commits.webkit.org/238814@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278870 268f45cc-cd09-0410-ab3c-d52691b4dbfc